fix (CSS landing page & Series page): change card background color to improve visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ header {
   padding: 10px 0;
 }
 .card {
-  background: #fff;
+  background: #202c3c;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
   width: 180px;
